--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
