--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-react": "^4.3.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.9.13",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
