--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-validator": "^7.1.0",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
