--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,19 @@
     "name": "backend",
     "version": "1.0.0",
     "main": "server.js",
+    "type": "module",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.17.1",
-      "mysql2": "^2.2.5",
-      "body-parser": "^1.19.0"
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "mysql2": "^2.2.5"
+    },
+    "devDependencies": {
+        "chai": "^5.1.1",
+        "mocha": "^10.7.0",
+        "supertest": "^7.0.0"
     }
-  }
-  
+}
